jena-shex/src/test/files/spec/negativeStructure/includeNonSimpleShape.shex
# Inclusion of a value constraint.
<http://a.example/S> {
  &<http://a.example/S1>;
  <http://a.example/p> .
}

<http://a.example/S1> [<http://a.example/s>]

